--- a/style.css
+++ b/style.css
@@ -11,15 +11,54 @@ header {
 
 main {
   width: 960px;
-  margin: 50px auto;
   display: flex;
+  margin: 50px auto;
 }
 
-.step-box {
+.box {
   width: 300px;
-  margin-right: 30px;
   padding: 10px;
+  margin-right: 30px;
   position: relative;
-  background-color: #eee;
+  background-color: #eeeeee;
 }
 
+.box:last-child {
+  margin-right: 0;
+}
+
+.box-img1 {
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-position: bottom;
+  background-size: cover;
+}
+.box-img2 {
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-position: bottom;
+  background-size: cover;
+}
+.box-img3 {
+  height: 150px;
+  background-image: url(img/flow03.png);
+  background-position: bottom;
+  background-size: cover;
+}
+
+.box-step {
+  background-color: #ff9a4b;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.title {
+  margin: 15px 0 5px;
+}
+
+footer {
+  height: 50px;
+  background-color: #aaa;
+}
